# MoonReader

./: .gitignore  Cargo.toml
.kiro/specs/knowledge-accumulation-system/: design.md  requirements.md  tasks.md
moon_reader/: Cargo.toml
moon_reader/migrations/: 001_initial.sql
moon_reader/src/: error.rs  lib.rs  main.rs  optimizations.rs
moon_reader/src/database/: mod.rs  tests.rs
moon_reader/src/handlers/: ai_config.rs  ai_quiz.rs  document.rs  knowledge_base.rs  mod.rs  review.rs
moon_reader/src/models/: mod.rs
moon_reader/src/parsers/: mod.rs
moon_reader/src/services/: ai.rs  mod.rs
moon_reader/tests/: document_api_tests.rs  end_to_end_tests.rs  integration_tests.rs  performance_tests.rs
reader_ui/: README.md  package-lock.json  package.json  vue.config.js
reader_ui/src/: App.vue  main.js
reader_ui/src/components/: Layout.vue
reader_ui/src/router/: index.js
reader_ui/src/store/: index.js
reader_ui/src/utils/: confirmDialog.js  performance.js
reader_ui/src/views/: AIQuizView.vue  DocumentsView.vue  HistoryView.vue  HomeView.vue  KnowledgeBaseDetailView.vue  KnowledgeBasesView.vue  ReviewView.vue  SettingsView.vue
