[package]
name = "moon_reader"
version = "0.1.0"
edition = "2024"

[lib]
name = "moon_reader"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
validator = { version = "0.16", features = ["derive"] }
pdf-extract = "0.7"
epub = "2.0"
mime = "0.3"
async-trait = "0.1"
rand = "0.8"

[dev-dependencies]
tempfile = "3.0"
